src/tests/code/pass/pass_int_rounding.u
entrypoint:~()
{
	a:i64{3};
	b:i64{2};
	c:i64{1};
	d:i64{-1};
	e:i64{-3};
}
->(
	i64{a/b} +				// 3/2 = 1
	i64{i64{c/b}=0}*2 + 	// 1/2 = 0
	i64{i64{d/b}=0}*4 +		// -1/2 = 0
	i64{e/b}*-8			// -3/2 = -1
)