src/tests/code/fail/fail_int_literal_hex.u
entrypoint:~()->(i64{0xFG})	// Character G is invalid in a hexadecimal integer.